# Decoherence-Necessary-Integrated-Information

./: .gitignore  CITATION.cff  Cargo.toml  README.md
experiments/: Cargo.toml
experiments/src/: lib.rs  noise_sweep.rs  stress_test.rs  validation.rs
figures/: generate_figures.py  requirements.txt
iit/: Cargo.toml
iit/src/: emd.rs  entropy.rs  lib.rs  partition.rs  phi_variants.rs
paper/: main.tex  references.bib
quantum-processor/: Cargo.toml
quantum-processor/src/: density_matrix.rs  lib.rs  lindblad.rs  operators.rs  quantum_reservoir.rs
results/: analysis_summary.md  consciousness_maximum_entanglement_results.json
